# hw12.3

./: pyproject.toml
tests/: test_arrs.py
utils/: arrs.py
